--- a/motofinai/templates/pages/payments/schedule_list.html
+++ b/motofinai/templates/pages/payments/schedule_list.html
@@ -34,6 +34,9 @@
                     Clear
                 </a>
                 {% endif %}
+                {% if request.GET.status %}
+                <input type="hidden" name="status" value="{{ request.GET.status }}">
+                {% endif %}
             </form>
         </div>
 
